# interleave

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.backup  Makefile.in  README.md  aclocal.m4  configure  configure.ac  expected.fastq  fastqinterleave.c  interleave.c  test.fastq  test_right.txt
test/: Makefile.am  Makefile.in  b.txt  basic.test  expected.3way.txt  left.txt
